add swagger documentation for auth
